# webamon-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
webamon_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  scans_fields.json
